[package]
name = "a01_websys_view_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.15", features = ["nightly", "csr"] }
log = "0.4.22"
wasm-bindgen = "0.2.93"
# web-sys = "0.3.70"

[dev-dependendies]
wasm-bindgen-test = "0.3.43"


# [features]
# CssStyleSheet = ["StyleSheet"]


[dependencies.web-sys]
version = "0.3.70"
features = ["CssStyleSheet", "Location"]

[features]
default = []
# tracing = ["dep:tracing"]
# trace-component-props = ["dep:serde", "dep:serde_json"]
# hydration = ["reactive_graph/hydration"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

# [package.metadata.cargo-all-features]
# denylist = ["tracing"]
