[package]
name = "a01_global_state_management"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
log = "0.4.22"
uuid = { version = "1", features = ["v4"] }
