[package]
name = "c01_a_component"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.15", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.15", features = ["nightly", "csr"] }
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }
